into-kubernetes/ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-server-svc-internal
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: hello-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
